# Icecam

./: AGENTS.md  README.md  README.md.bak
.github/workflows/: android.yml  main.yml
app/: build.gradle
app/src/main/java/dev/icecam/app/: BackendApplyQueue.java  BackendHealth.java  BuildInfo.java  DiagnosticDumper.java  MediaStager.java  ReplacementWatchdog.java  RootBinderShell.java  RootBootstrap.java  SelinuxPolicy.java  SmartDiagnostics.java  VliveBinderClient.java
app/src/main/java/dev/icecam/app/runtime/: SideEffectRunner.java
docs/: HANDOVER_PROMPT.md  HANDOVER_v28.md  V26_XIAOMI_SELINUX_BINDER_FIX.md  V27_RECONSTRUCTION_AND_DIAGNOSTICS.md  V28_STABLE_REPLACEMENT.md  V29_REVERSE_ENGINEERED_FLOW.md  V30_CORRECT_CONTROLS.md  V31_FAITHFUL_STABLE.md
jni/: CMakeLists.txt  CMakeLists.txt.bak  hook.cpp
jni/shadowhook/: sh_config.h  sh_config.h.bak  sh_version.h
jni/shadowhook/common/: sh_log.h
jni/shadowhook/include/: sh_version.h
reconstruction/: BINARY_ANALYSIS.md  README.md  TX_CODES.md
reconstruction/java/U/: ServiceHelper.java
reconstruction/java/com/xiaomi/vlive/: App.java  IMyBinderService.java
reconstruction/java/d1/: MyBinderProxy.java
reconstruction/native/libvc/: hooks_graphicbuffer.cpp  hooks_graphicbuffer.h
reconstruction/native/vcplax/: binder_service.h  main.cpp
